@@ -1,3 +1,6 @@
+* Fri Dec  5 13:11:00 EST 2014 Henri Gavin <hpgavin> 0.20140514
+- require "anlyz ~= 0" in order to run matrix condensation
+
 * Fri Nov  7 13:11:00 EST 2014 Henri Gavin <hpgavin> 0.20140514
 - update Frame3DD-manual.html with instructions on how to zoom, pan, and shift
 3D images in gnuplot.
